--- a/turbo.json
+++ b/turbo.json
@@ -11,6 +11,9 @@
       "cache": false,
       "persistent": true
     },
+    "clean": {
+      "cache": false
+    },
     "test": {
       "dependsOn": ["build"],
       "outputs": ["coverage/**"]
