--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "yarn workspaces run build",
+    "build:packages": "yarn workspaces --filter \"@event-mingle/*\" run build",
+    "build:apps": "yarn workspaces --filter \"!@event-mingle/*\" run build",
+    "build": "yarn build:packages && yarn build:apps",
     "dev": "yarn workspaces run dev",
     "lint": "yarn workspaces run lint",
     "clean": "yarn workspaces run clean && rm -rf node_modules",
