fix: update workspace configuration for Vercel deployment

--- a/package.json
+++ b/package.json
@@ -17,11 +17,5 @@
   "devDependencies": {
     "prettier": "^3.0.0"
   },
-  "packageManager": "yarn@1.22.19",
-  "resolutions": {
-    "@event-mingle/database": "workspace:*",
-    "@event-mingle/shared": "workspace:*",
-    "@event-mingle/ui": "workspace:*",
-    "@event-mingle/config": "workspace:*"
-  }
+  "packageManager": "yarn@1.22.19"
 }
