fix: update workspace configuration for Vercel deployment

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,1 +1,18 @@
- 
+nodeLinker: node-modules
+enableGlobalCache: false
+
+workspaces:
+  - apps/*
+  - packages/*
+
+packageExtensions:
+  "@event-mingle/database@*":
+    peerDependencies:
+      "@event-mingle/shared": "*"
+  "@event-mingle/shared@*":
+    peerDependencies:
+      "@event-mingle/config": "*"
+  "@event-mingle/ui@*":
+    peerDependencies:
+      "@event-mingle/shared": "*"
+      "@event-mingle/config": "*" 
