--- a/.gitignore
+++ b/.gitignore
@@ -40,4 +40,31 @@ next-env.d.ts
 
 # IDE
 .idea
-.vscode 
+.vscode
+
+# Node.js
+node_modules
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+
+# Build outputs
+dist
+.turbo
+.next
+out
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Vercel
+.vercel
+
+# Misc
+.DS_Store
+*.pem
+coverage 
