--- a/apps/EventManagerDashboard/package.json
+++ b/apps/EventManagerDashboard/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@event-mingle/shared": "workspace:*",
-    "@event-mingle/ui": "workspace:*",
-    "@event-mingle/config": "workspace:*",
+    "@event-mingle/shared": "*",
+    "@event-mingle/ui": "*",
+    "@event-mingle/config": "*",
     "@heroicons/react": "^2.1.1",
     "@prisma/client": "^6.9.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
