--- a/apps/event-mingle/package.json
+++ b/apps/event-mingle/package.json
@@ -11,15 +11,14 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@event-mingle/database": "workspace:*",
-    "@event-mingle/shared": "workspace:*",
+    "@event-mingle/database": "*",
+    "@event-mingle/shared": "*",
     "@prisma/client": "^5.10.0",
     "@stripe/stripe-js": "^2.4.0",
     "agora-rtc-react": "^1.1.3",
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "date-fns": "^3.3.1",
-    "drizzle-orm": "^0.29.3",
     "firebase": "^10.8.0",
     "framer-motion": "^11.0.8",
     "graphql": "^16.8.1",
@@ -53,7 +52,6 @@
     "@types/react-dom": "^18.2.19",
     "@types/socket.io-client": "^3.0.0",
     "autoprefixer": "^10.4.17",
-    "drizzle-kit": "^0.20.14",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.0",
     "jest": "^29.7.0",
