--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,27 +1,30 @@
 {
   "name": "@event-mingle/database",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsup",
+    "clean": "rimraf .turbo node_modules dist",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push --skip-generate",
     "dev": "tsup --watch",
-    "lint": "eslint src/",
-    "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist"
+    "format": "prettier --check . --ignore-path ../../.gitignore",
+    "lint": "eslint .",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@event-mingle/database": "file:",
-    "drizzle-orm": "^0.29.0",
-    "postgres": "^3.4.0",
-    "zod": "^3.22.0"
+    "@event-mingle/shared": "*",
+    "@prisma/client": "^5.10.0"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "drizzle-kit": "^0.20.0",
-    "eslint": "^8.0.0",
-    "tsup": "^8.0.0",
-    "typescript": "^5.0.0"
+    "@types/node": "^20",
+    "eslint": "^8",
+    "prisma": "^5.10.0",
+    "rimraf": "^5.0.5",
+    "tsup": "^8.0.2",
+    "typescript": "^5"
   }
 }
