--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,19 +1,24 @@
 {
   "name": "@event-mingle/types",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
   "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch",
-    "lint": "eslint . --ext .ts,.tsx",
-    "clean": "rm -rf dist"
+    "build": "tsup",
+    "clean": "rimraf .turbo node_modules dist",
+    "dev": "tsup --watch",
+    "format": "prettier --check . --ignore-path ../../.gitignore",
+    "lint": "eslint .",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@types/node": "^20.11.24",
-    "eslint": "^8.56.0",
-    "typescript": "^5.3.3"
+    "@types/node": "^20",
+    "eslint": "^8",
+    "rimraf": "^5.0.5",
+    "tsup": "^8.0.2",
+    "typescript": "^5"
   },
   "dependencies": {
     "@event-mingle/types": "file:",
