fix: update build configuration for Prisma client generation

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev": "yarn workspaces run dev",
     "lint": "yarn workspaces run lint",
     "clean": "yarn workspaces run clean && rm -rf node_modules",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "prisma:generate": "yarn workspace @event-mingle/database db:generate"
   },
   "devDependencies": {
     "prettier": "^3.0.0"
