--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint": "yarn workspaces run lint",
     "clean": "yarn workspaces run clean && rm -rf node_modules",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "prisma:generate": "yarn workspace @event-mingle/database db:generate"
+    "prisma:generate": "yarn workspace @event-mingle/database prisma generate",
+    "postinstall": "yarn prisma:generate"
   },
   "devDependencies": {
     "prettier": "^3.0.0"
