--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "build": "tsup",
     "clean": "rimraf .turbo node_modules dist",
-    "db:generate": "prisma generate",
-    "db:push": "prisma db push --skip-generate",
+    "prisma:generate": "prisma generate",
+    "prisma:push": "prisma db push --skip-generate",
     "dev": "tsup --watch",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint .",
