--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -13,16 +13,17 @@
     "dev": "tsup --watch",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint .",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@event-mingle/shared": "*",
-    "@prisma/client": "^5.10.0"
+    "@prisma/client": "^5.10.0",
+    "prisma": "^5.10.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "eslint": "^8",
-    "prisma": "^5.10.0",
     "rimraf": "^5.0.5",
     "tsup": "^8.0.2",
     "typescript": "^5"
